--- a/dynamic_application_system/applications/templates/applications/home.html
+++ b/dynamic_application_system/applications/templates/applications/home.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Home Page</title>
-    </head>
-    <body>
-        <p>Welcome to my home page!</p>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Home Page{% endblock %}
+
+{% block content %}
+<h1>Home Page</h1>
+
+<p>Welcome to my home page!</p>
+{% endblock %}
