--- a/dynamic_application_system/templates/base.html
+++ b/dynamic_application_system/templates/base.html
@@ -1,10 +1,12 @@
 {% load static %}
+
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'applications/style.css' %}">
 </head>
 <body>
-    <img src="{% static 'images/sitelogo.png' %}" alt="Logo">
+    <img src="{% static 'images/sitelogo.png' %}" alt="Logo"><br/><br/>
     {% block content %}{% endblock %}
 </body>
 </html>
