admin form customization

--- a/dynamic_application_system/templates/base.html
+++ b/dynamic_application_system/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'applications/style.css' %}">
 </head>
 <body>
-    <img src="{% static 'images/sitelogo.png' %}" alt="Logo"><br/><br/>
+    <img src="{% static 'images/sitelogo.jpg' %}" alt="Logo"><br/><br/>
     {% block content %}{% endblock %}
 </body>
 </html>
