--- a/dynamic_application_system/applications/static/applications/style.css
+++ b/dynamic_application_system/applications/static/applications/style.css
@@ -2,4 +2,9 @@ li a {
     color: green;
 }
 
+body {
+    background: rgb(50, 2, 180) repeat;
+    color:#b2adbe
+}
+
 /*next bootstrap or materializecss*/
