feat: fixing templates, appearance etc

--- a/dynamic_application_system/applications/static/applications/style.css
+++ b/dynamic_application_system/applications/static/applications/style.css
@@ -3,8 +3,8 @@ li a {
 }
 
 body {
-    background: rgb(50, 2, 180) repeat;
-    color:#b2adbe
+    background: rgb(170, 159, 201) repeat;
+    color:#373144
 }
 
 /*next bootstrap or materializecss*/
