--- a/dynamic_application_system/applications/templates/applications/home.html
+++ b/dynamic_application_system/applications/templates/applications/home.html
@@ -3,7 +3,23 @@
 {% block title %}Home Page{% endblock %}
 
 {% block content %}
-<h1>Home Page</h1>
-
-<p>Welcome to my home page!</p>
+<h1>Welcome to the dynamic-application-system! <span class="icon-emo-happy"></span></h1>
+	<p class="lead">
+		If you already have an account, go ahead and <a href="{% url 'login' %}">log in</a>. If you are new to dynamic-application-system, get started
+    		by creating a <a href="{% url 'citizen_signup' %}">citizen account</a> or an <a href="">other account</a>.
+    </p>
+  	<hr>
+  	<h3>What's this about?</h3>
+  	<p>
+    		This Django application is for the thesis with title 'Usage of devops methodologies and tools in development and maintenance
+             of web apps' at 
+                <a href="https://www.dit.hua.gr/index.php/en/">DIT HUA</a>.
+    		In this application, users can sign up as a citizen or other user. Citizens can create applications for some reason and various carriers can accept or deny them.
+	</p>
+  	<p>Want to run this code locally? <a href="https://github.com/panagiotisbellias/dynamic-application-system/blob/web-app/README.md">Read detailed instructions on how to run this project</a>.</p>
+  	<p class="mb-0">Panagiotis Bellias<br>
+		<a href="https://www.facebook.com/BelliasPanayiotis">Find me on Facebook</a><br>
+		<a href="https://www.instagram.com/bel_panos/">@bel_panos (Instagram)</a><br>
+        <a href="https://github.com/panagiotisbellias/">panagiotisbellias (GitHub)</a><br>
+	</p><br>
 {% endblock %}
